Addition of a structure to handle error screens when service calls fail or a navigation route to pages is not found.

--- a/src/app/components/container-pages/container-pages.component.html
+++ b/src/app/components/container-pages/container-pages.component.html
@@ -16,6 +16,20 @@
     (changePage)="handleChangePage($event)"
   >
   </app-about-us>
+} @else if (typePage.current === 'error-service') {
+    <app-error
+      (changePage)="handleChangePage($event)"
+      [typeError]="getTypeError('service')"
+      [dataError]="dataErrorService"
+    >
+    </app-error>
+} @else {
+  <app-error
+    (changePage)="handleChangePage($event)"
+    [typeError]="getTypeError('not-found')"
+    [dataError]="dataErrorNotFound"
+  >
+  </app-error>
 }
 
 
