The project added structure to the page components to handle potential error scenarios, and minor improvements were applied to the .ts files to facilitate future maintenance of the logic.

--- a/src/app/components/pages/about-us/about-us.component.html
+++ b/src/app/components/pages/about-us/about-us.component.html
@@ -1,1 +1,8 @@
-<p>about-us works!</p>
+@if(isErrorService == false) {
+  <p>Página em produção! Disponível em breve! ::)</p>
+
+  <!-- Adicionar o restante da pagina dentro desta condicional -->
+  @if(dataCard.length > 4) {
+
+  }
+}
