--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,6 +1,19 @@
-<p>home works!</p>
+@if(isErrorService == false) {
+  <app-title
+    [title]="titlePage[0]"
+  >
+  </app-title>
 
-<app-carousel
-  [dataCard]="dataCard"
->
-</app-carousel>
+  <app-carousel
+    [dataCard]="dataCard"
+  >
+  </app-carousel>
+
+  <!-- Adicionar o restante da pagina dentro desta condicional -->
+  @if(dataCard.length > 4) {
+    <app-title
+      [title]="titlePage[1]"
+    >
+    </app-title>
+  }
+}
