Correction of minor responsiveness bugs captured after uploading the application to the Vercel server.

--- a/src/app/components/pages/about-us/about-us.component.scss
+++ b/src/app/components/pages/about-us/about-us.component.scss
@@ -143,3 +143,11 @@
 
     }
 }
+
+@media(max-width: 550px) {
+  ::ng-deep app-title{
+    .title-page {
+      text-align: center !important;
+    }
+}
+}
