Importing the footer component into the app component's HTML and app module file.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,7 @@
       (changePage)="handleChangePage($event)"
     ></app-container-pages>
   </div>
-  <p style="margin-left: 5rem">Footer</p>
+  <app-footer
+    (changePage)="handleChangePage($event)"
+  ></app-footer>
 </section>
