--- a/src/app/components/pages/error/error.component.html
+++ b/src/app/components/pages/error/error.component.html
@@ -8,7 +8,7 @@
     }
   </div>
   <div class="image-container">
-    <img src={{dataError.srcImg}} alt={{dataError.altImg}}>
+    <img [src]="dataError.srcImg" [alt]="dataError.altImg">
   </div>
 
 </div>
