applying small improvements

--- a/src/app/components/pages/error/error.component.scss
+++ b/src/app/components/pages/error/error.component.scss
@@ -4,6 +4,9 @@
   padding: 45px;
   align-items: center;
 
+  max-width: 1400px;
+  margin: 0 auto;
+
   .text {
     margin-bottom: 2rem;
     text-align: center;
